apps/base/juice-shop/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: juice-shop-svc
  namespace: juice-shop
  labels:
    app: juice-shop
spec:
  type: ClusterIP
  selector:
    app: juice-shop
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
